# glance

./: .gitignore  .landmark.yml  AGENTS.md  Cargo.toml  README.md  SKILL.md  VISION.md  glance.toml
.github/workflows/: ci.yml
assets/: kit.css  kit.js
backlog.d/: 001-walker-hash-plan.md  002-citation-gate.md  003-providers-tier-routing.md  004-page-template-house-style.md  005-prompt-context-engineering.md  006-sister-repo-publisher.md  007-bb-trigger-wiring.md  008-sanctum-site-serving.md  009-cairn-pilot-end-to-end.md  010-cross-cutting-root-sections.md  011-fleet-citizenship.md  012-qa-face-deferred.md  013-crucible-prompt-evals.md
crates/glance/: Cargo.toml
crates/glance-catalog/: Cargo.toml
crates/glance-catalog/catalog/: catalog.schema.json
crates/glance-catalog/examples/: exemplar.rs  prompt_kit_demo.rs
crates/glance-catalog/src/: component.rs  document.rs  inline.rs  leaf.rs  lib.rs  profile.rs  render.rs  structural.rs  time.rs
crates/glance-catalog/tests/: producer_cli.rs
crates/glance-check/: Cargo.toml
crates/glance-check/src/: lib.rs
crates/glance-check/tests/: citation_gate.rs
crates/glance-check/tests/fixtures/source/: README.md
crates/glance-core/: Cargo.toml
crates/glance-core/src/: lib.rs
crates/glance-core/tests/: walker_plan.rs
crates/glance-core/tests/fixtures/mini-source/: README.md
crates/glance-core/tests/fixtures/mini-source/docs/: guide.md
crates/glance-core/tests/fixtures/mini-source/src/: lib.rs
crates/glance-core/tests/fixtures/mini-source/src/parser/: mod.rs
crates/glance-gen/: Cargo.toml
crates/glance-gen/catalog/: catalog.md  catalog.schema.json
crates/glance-gen/src/: context.rs  images.rs  lib.rs  spec.rs
crates/glance-gen/tests/: context_contract.rs  spec_renderer.rs
crates/glance-mcp/: Cargo.toml
crates/glance-mcp/src/: lib.rs  main.rs
crates/glance-mcp/tests/: live_binary.rs
crates/glance-publish/: Cargo.toml
crates/glance-publish/src/: lib.rs
crates/glance/src/: canary.rs  main.rs
docs/: images.md  page-classes.md  producer-cli.md  self-run-2026-07-03.md
prompts/: interior.md  leaf.md  root.md
scripts/: check.sh  producer_cli_smoke.py  smoke.sh
site/: DESIGN.md  changelog.html  features.html  get-started.html  index.html  marketing.css
tests/fixtures/live-sample/: index.html  metadata.json
tests/fixtures/live-sample/docs/: index.html  metadata.json
tests/fixtures/live-sample/src/: index.html  metadata.json
tests/fixtures/live-sample/src/parser/: index.html  metadata.json
