[workspace]
members = [
  "crates/glance",
  "crates/glance-check",
  "crates/glance-core",
  "crates/glance-gen",
  "crates/glance-mcp",
  "crates/glance-publish",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/misty-step/glance"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.8"
