[package]
name = "glance-check"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
glance-core = { path = "../glance-core" }
scraper.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
