[package]
name = "glance-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
