[package]
name = "glance-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server exposing glance's run/plan/check/publish verbs as tools over the compiled CLI"

[[bin]]
name = "glance-mcp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1"

[dev-dependencies]
tempfile.workspace = true
