[package]
name = "glance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glance-check = { path = "../glance-check" }
glance-core = { path = "../glance-core" }
glance-gen = { path = "../glance-gen" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
