[package]
name = "glance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glance-check = { path = "../glance-check" }
glance-core = { path = "../glance-core" }
glance-gen = { path = "../glance-gen" }
glance-publish = { path = "../glance-publish" }
serde.workspace = true
serde_json = "1"
toml.workspace = true
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
